[package]
name = "lumiere"
version = "0.1.0"
authors = ["Valerian Garleanu <valerian@dusklabs.io>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0-only"

[dependencies]
slint = "0.2.0"
glow = { version = "0.11" }
instant = { version = "0.1", features = ["now"] }
libmpv = { git = "https://github.com/anlumo/libmpv-rs" }

[build-dependencies]
slint-build = "0.2.0"

[patch.crates-io.slint]
git = "https://github.com/vgarleanu/slint"
